--- a/docs/docs-ref-autogen/outlook_1_3/office.contact.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.contact.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a9c5447511801610393547f58181ce3cce8864d5
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 49f0cd60eb385eb249a2b71cd13a45d1e748b81e
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26232313"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26645444"
 items:
 - uid: Outlook_1_3.Office.Contact
   summary: >-
-    <span data-ttu-id="00b3b-p101">表示存储在服务器上的联系人。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="00b3b-p101">Represents a contact stored on the server. Read mode only.</span></span>
+    <span data-ttu-id="33f88-p101">表示存储在服务器上的联系人。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="33f88-p101">Represents a contact stored on the server. Read mode only.</span></span>
 
 
-    <span data-ttu-id="00b3b-103">返回由活动项目的 getEntities 或 getEntitiesByType 方法的[Office.Entities](xref:Outlook_1_3.Office.Entities)对象的联系人属性中返回相关联的电子邮件或约会的联系人列表中。</span><span class="sxs-lookup"><span data-stu-id="00b3b-103">The list of contacts associated with an email message or appointment is returned in the contacts property of the [Office.Entities](xref:Outlook_1_3.Office.Entities) object that is returned by the getEntities or getEntitiesByType method of the active item.</span></span>
+    <span data-ttu-id="33f88-103">返回由活动项目的 getEntities 或 getEntitiesByType 方法的[Office.Entities](xref:Outlook_1_3.Office.Entities)对象的联系人属性中返回相关联的电子邮件或约会的联系人列表中。</span><span class="sxs-lookup"><span data-stu-id="33f88-103">The list of contacts associated with an email message or appointment is returned in the contacts property of the [Office.Entities](xref:Outlook_1_3.Office.Entities) object that is returned by the getEntities or getEntitiesByType method of the active item.</span></span>
 
 
-    <span data-ttu-id="00b3b-104">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00b3b-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="33f88-104">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="33f88-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="00b3b-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="00b3b-105"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="00b3b-106">受限</span><span class="sxs-lookup"><span data-stu-id="00b3b-106">Restricted</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="33f88-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="33f88-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="33f88-106">受限</span><span class="sxs-lookup"><span data-stu-id="33f88-106">Restricted</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="00b3b-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="00b3b-107"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="00b3b-108">Read</span><span class="sxs-lookup"><span data-stu-id="00b3b-108">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="33f88-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="33f88-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="33f88-108">阅读</span><span class="sxs-lookup"><span data-stu-id="33f88-108">Read</span></span></td></tr></table>
   name: Office.Contact
   fullName: Office.Contact
   langs:
@@ -34,7 +34,7 @@ items:
   - Outlook_1_3.Office.Contact.phoneNumbers
   - Outlook_1_3.Office.Contact.urls
 - uid: Outlook_1_3.Office.Contact.addresses
-  summary: <span data-ttu-id="00b3b-109">包含与联系人关联的邮件和街道地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="00b3b-109">An array of strings containing the mailing and street addresses associated with the contact.</span></span> <span data-ttu-id="00b3b-110">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="00b3b-110">Nullable.</span></span>
+  summary: <span data-ttu-id="33f88-109">包含与联系人关联的邮件和街道地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="33f88-109">An array of strings containing the mailing and street addresses associated with the contact.</span></span> <span data-ttu-id="33f88-110">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="33f88-110">Nullable.</span></span>
   name: addresses
   fullName: addresses
   langs:
@@ -46,7 +46,7 @@ items:
       type:
       - string[]
 - uid: Outlook_1_3.Office.Contact.businessName
-  summary: <span data-ttu-id="00b3b-111">包含与联系人关联的企业名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="00b3b-111">A string containing the name of the business associated with the contact.</span></span> <span data-ttu-id="00b3b-112">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="00b3b-112">Nullable.</span></span>
+  summary: <span data-ttu-id="33f88-111">包含与联系人关联的企业名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="33f88-111">A string containing the name of the business associated with the contact.</span></span> <span data-ttu-id="33f88-112">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="33f88-112">Nullable.</span></span>
   name: businessName
   fullName: businessName
   langs:
@@ -58,7 +58,7 @@ items:
       type:
       - string
 - uid: Outlook_1_3.Office.Contact.emailAddresses
-  summary: <span data-ttu-id="00b3b-113">包含与联系人关联的 SMTP 电子邮件地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="00b3b-113">An array of strings containing the SMTP email addresses associated with the contact.</span></span> <span data-ttu-id="00b3b-114">可以为 null，</span><span class="sxs-lookup"><span data-stu-id="00b3b-114">Nullable,</span></span>
+  summary: <span data-ttu-id="33f88-113">包含与联系人关联的 SMTP 电子邮件地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="33f88-113">An array of strings containing the SMTP email addresses associated with the contact.</span></span> <span data-ttu-id="33f88-114">可以为 null，</span><span class="sxs-lookup"><span data-stu-id="33f88-114">Nullable,</span></span>
   name: emailAddresses
   fullName: emailAddresses
   langs:
@@ -70,7 +70,7 @@ items:
       type:
       - string[]
 - uid: Outlook_1_3.Office.Contact.personName
-  summary: <span data-ttu-id="00b3b-115">包含与联系人关联的人员姓名的字符串。</span><span class="sxs-lookup"><span data-stu-id="00b3b-115">A string containing the name of the person associated with the contact.</span></span> <span data-ttu-id="00b3b-116">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="00b3b-116">Nullable.</span></span>
+  summary: <span data-ttu-id="33f88-115">包含与联系人关联的人员姓名的字符串。</span><span class="sxs-lookup"><span data-stu-id="33f88-115">A string containing the name of the person associated with the contact.</span></span> <span data-ttu-id="33f88-116">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="33f88-116">Nullable.</span></span>
   name: personName
   fullName: personName
   langs:
@@ -82,7 +82,7 @@ items:
       type:
       - string
 - uid: Outlook_1_3.Office.Contact.phoneNumbers
-  summary: <span data-ttu-id="00b3b-117">包含与联系人关联的每个电话号码的 PhoneNumber 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="00b3b-117">An array containing a PhoneNumber object for each phone number associated with the contact.</span></span> <span data-ttu-id="00b3b-118">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="00b3b-118">Nullable.</span></span>
+  summary: <span data-ttu-id="33f88-117">包含与联系人关联的每个电话号码的 PhoneNumber 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="33f88-117">An array containing a PhoneNumber object for each phone number associated with the contact.</span></span> <span data-ttu-id="33f88-118">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="33f88-118">Nullable.</span></span>
   name: phoneNumbers
   fullName: phoneNumbers
   langs:
@@ -94,7 +94,7 @@ items:
       type:
       - PhoneNumber[]
 - uid: Outlook_1_3.Office.Contact.urls
-  summary: <span data-ttu-id="00b3b-119">包含与联系人关联的 Internet URL 的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="00b3b-119">An array of strings containing the Internet URLs associated with the contact.</span></span> <span data-ttu-id="00b3b-120">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="00b3b-120">Nullable.</span></span>
+  summary: <span data-ttu-id="33f88-119">包含与联系人关联的 Internet URL 的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="33f88-119">An array of strings containing the Internet URLs associated with the contact.</span></span> <span data-ttu-id="33f88-120">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="33f88-120">Nullable.</span></span>
   name: urls
   fullName: urls
   langs:
