--- a/docs/docs-ref-autogen/outlook_1_4/office.location.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.location.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ce1c669093011fa0698957ae06cff14383d537f5
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: f0879ce8b9c43a99c82988889abf661fa9e6980a
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26223682"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26649091"
 items:
 - uid: Outlook_1_4.Office.Location
   summary: >-
-    <span data-ttu-id="1c709-101">提供用于获取和设置 Outlook 外接程序中的会议地点的方法。</span><span class="sxs-lookup"><span data-stu-id="1c709-101">Provides methods to get and set the location of a meeting in an Outlook add-in.</span></span>
+    <span data-ttu-id="9484b-101">提供用于获取和设置 Outlook 外接程序中的会议地点的方法。</span><span class="sxs-lookup"><span data-stu-id="9484b-101">Provides methods to get and set the location of a meeting in an Outlook add-in.</span></span>
 
 
-    <span data-ttu-id="1c709-102">\[[API 集： 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1c709-102">\[ [API set: Mailbox 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9484b-102">\[[API 集： 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9484b-102">\[ [API set: Mailbox 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="1c709-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="1c709-103"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="1c709-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="1c709-104">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="9484b-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="9484b-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="9484b-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="9484b-104">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="1c709-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="1c709-105"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="1c709-106">撰写</span><span class="sxs-lookup"><span data-stu-id="1c709-106">Compose</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="9484b-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="9484b-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="9484b-106">撰写</span><span class="sxs-lookup"><span data-stu-id="9484b-106">Compose</span></span></td></tr></table>
   name: Office.Location
   fullName: Office.Location
   langs:
@@ -28,18 +28,18 @@ items:
   - Outlook_1_4.Office.Location.setAsync
 - uid: Outlook_1_4.Office.Location.getAsync
   summary: >-
-    <span data-ttu-id="1c709-107">获取约会的位置。</span><span class="sxs-lookup"><span data-stu-id="1c709-107">Gets the location of an appointment.</span></span>
+    <span data-ttu-id="9484b-107">获取约会的位置。</span><span class="sxs-lookup"><span data-stu-id="9484b-107">Gets the location of an appointment.</span></span>
 
 
-    <span data-ttu-id="1c709-108">getAsync 方法开始对 Exchange 服务器进行异步调用，以获取约会的位置。</span><span class="sxs-lookup"><span data-stu-id="1c709-108">The getAsync method starts an asynchronous call to the Exchange server to get the location of an appointment.</span></span> <span data-ttu-id="1c709-109">约会的位置以 asyncResult.value 属性中的字符串形式提供。</span><span class="sxs-lookup"><span data-stu-id="1c709-109">The location of the appointment is provided as a string in the asyncResult.value property.</span></span>
+    <span data-ttu-id="9484b-108">getAsync 方法开始对 Exchange 服务器进行异步调用，以获取约会的位置。</span><span class="sxs-lookup"><span data-stu-id="9484b-108">The getAsync method starts an asynchronous call to the Exchange server to get the location of an appointment.</span></span> <span data-ttu-id="9484b-109">约会的位置以 asyncResult.value 属性中的字符串形式提供。</span><span class="sxs-lookup"><span data-stu-id="9484b-109">The location of the appointment is provided as a string in the asyncResult.value property.</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="1c709-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="1c709-110"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="1c709-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="1c709-111">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="9484b-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="9484b-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="9484b-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="9484b-111">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="1c709-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="1c709-112"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="1c709-113">撰写</span><span class="sxs-lookup"><span data-stu-id="1c709-113">Compose</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="9484b-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="9484b-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="9484b-113">撰写</span><span class="sxs-lookup"><span data-stu-id="9484b-113">Compose</span></span></td></tr></table>
 
 
-    <span data-ttu-id="1c709-114">除了此签名，该方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="1c709-114">In addition to this signature, the method also has the following signature:</span></span>
+    <span data-ttu-id="9484b-114">除了此签名，该方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="9484b-114">In addition to this signature, the method also has the following signature:</span></span>
 
 
     `getAsync(callback: (result: AsyncResult<string>) => void): void;`
@@ -56,34 +56,34 @@ items:
       description: ''
     parameters:
     - id: options
-      description: '<span data-ttu-id="1c709-115">可选。</span><span class="sxs-lookup"><span data-stu-id="1c709-115">Optional.</span></span> <span data-ttu-id="1c709-116">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="1c709-116">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="1c709-117">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="1c709-117">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
+      description: '<span data-ttu-id="9484b-115">可选。</span><span class="sxs-lookup"><span data-stu-id="9484b-115">Optional.</span></span> <span data-ttu-id="9484b-116">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="9484b-116">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="9484b-117">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="9484b-117">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
       type:
       - office.Office.AsyncContextOptions
     - id: callback
       description: >-
-        <span data-ttu-id="1c709-118">可选。</span><span class="sxs-lookup"><span data-stu-id="1c709-118">Optional.</span></span> <span data-ttu-id="1c709-119">该方法完成后，使用类型 Office.AsyncResult 的单个参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="1c709-119">When the method completes, the function passed in the callback parameter is called with a single parameter of type Office.AsyncResult.</span></span>
+        <span data-ttu-id="9484b-118">可选。</span><span class="sxs-lookup"><span data-stu-id="9484b-118">Optional.</span></span> <span data-ttu-id="9484b-119">该方法完成后，使用类型 Office.AsyncResult 的单个参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="9484b-119">When the method completes, the function passed in the callback parameter is called with a single parameter of type Office.AsyncResult.</span></span>
 
 
-        <span data-ttu-id="1c709-120">\[Api 集： 邮箱 1.1\]</span><span class="sxs-lookup"><span data-stu-id="1c709-120">\[Api set: Mailbox 1.1\]</span></span>
+        <span data-ttu-id="9484b-120">\[Api 集： 邮箱 1.1\]</span><span class="sxs-lookup"><span data-stu-id="9484b-120">\[Api set: Mailbox 1.1\]</span></span>
       type:
       - '(result: AsyncResult<string>) => void'
 - uid: Outlook_1_4.Office.Location.setAsync
   summary: >-
-    <span data-ttu-id="1c709-121">设置约会的位置。</span><span class="sxs-lookup"><span data-stu-id="1c709-121">Sets the location of an appointment.</span></span>
+    <span data-ttu-id="9484b-121">设置约会的位置。</span><span class="sxs-lookup"><span data-stu-id="9484b-121">Sets the location of an appointment.</span></span>
 
 
-    <span data-ttu-id="1c709-p104">setAsync 方法开始对 Exchange 服务器进行异步调用，以设置约会的位置。设置约会的位置将覆盖当前位置。</span><span class="sxs-lookup"><span data-stu-id="1c709-p104">The setAsync method starts an asynchronous call to the Exchange server to set the location of an appointment. Setting the location of an appointment overwrites the current location.</span></span>
+    <span data-ttu-id="9484b-p104">setAsync 方法开始对 Exchange 服务器进行异步调用，以设置约会的位置。设置约会的位置将覆盖当前位置。</span><span class="sxs-lookup"><span data-stu-id="9484b-p104">The setAsync method starts an asynchronous call to the Exchange server to set the location of an appointment. Setting the location of an appointment overwrites the current location.</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="1c709-124">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="1c709-124"> Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="1c709-125">ReadItem</span><span class="sxs-lookup"><span data-stu-id="1c709-125">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="9484b-124">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="9484b-124">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="9484b-125">ReadItem</span><span class="sxs-lookup"><span data-stu-id="9484b-125">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="1c709-126">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="1c709-126"> Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="1c709-127">撰写</span><span class="sxs-lookup"><span data-stu-id="1c709-127">Compose</span></span></td></tr>
+    <tr><td>[<span data-ttu-id="9484b-126">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="9484b-126">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="9484b-127">撰写</span><span class="sxs-lookup"><span data-stu-id="9484b-127">Compose</span></span></td></tr>
 
 
-    <tr><td><span data-ttu-id="1c709-128">Errors</span><span class="sxs-lookup"><span data-stu-id="1c709-128">Errors</span></span></td><td><span data-ttu-id="1c709-129">DataExceedsMaximumSize-location 参数的长度超过 255 个字符。</span><span class="sxs-lookup"><span data-stu-id="1c709-129">DataExceedsMaximumSize - The location parameter is longer than 255 characters.</span></span></td></tr></table>
+    <tr><td><span data-ttu-id="9484b-128">错误</span><span class="sxs-lookup"><span data-stu-id="9484b-128">Errors</span></span></td><td><span data-ttu-id="9484b-129">DataExceedsMaximumSize-location 参数的长度超过 255 个字符。</span><span class="sxs-lookup"><span data-stu-id="9484b-129">DataExceedsMaximumSize - The location parameter is longer than 255 characters.</span></span></td></tr></table>
 
 
-    <span data-ttu-id="1c709-130">除了此签名，该方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="1c709-130">In addition to this signature, the method also has the following signatures:</span></span>
+    <span data-ttu-id="9484b-130">除了此签名，该方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="9484b-130">In addition to this signature, the method also has the following signatures:</span></span>
 
 
     `setAsync(location: string): void;`
@@ -106,18 +106,18 @@ items:
       description: ''
     parameters:
     - id: location
-      description: <span data-ttu-id="1c709-p105">约会的位置。字符串大小限制为 255 个字符。</span><span class="sxs-lookup"><span data-stu-id="1c709-p105">The location of the appointment. The string is limited to 255 characters.</span></span>
+      description: <span data-ttu-id="9484b-p105">约会的位置。字符串大小限制为 255 个字符。</span><span class="sxs-lookup"><span data-stu-id="9484b-p105">The location of the appointment. The string is limited to 255 characters.</span></span>
       type:
       - string
     - id: options
-      description: '<span data-ttu-id="1c709-133">可选。</span><span class="sxs-lookup"><span data-stu-id="1c709-133">Optional.</span></span> <span data-ttu-id="1c709-134">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="1c709-134">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="1c709-135">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="1c709-135">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
+      description: '<span data-ttu-id="9484b-133">可选。</span><span class="sxs-lookup"><span data-stu-id="9484b-133">Optional.</span></span> <span data-ttu-id="9484b-134">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="9484b-134">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="9484b-135">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="9484b-135">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
       type:
       - office.Office.AsyncContextOptions
     - id: callback
       description: >-
-        <span data-ttu-id="1c709-136">可选。</span><span class="sxs-lookup"><span data-stu-id="1c709-136">Optional.</span></span> <span data-ttu-id="1c709-137">该方法完成后，使用类型 Office.AsyncResult 的单个参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="1c709-137">When the method completes, the function passed in the callback parameter is called with a single parameter of type Office.AsyncResult.</span></span> <span data-ttu-id="1c709-138">如果设置位置失败，则 asyncResult.error 属性将包含错误代码。</span><span class="sxs-lookup"><span data-stu-id="1c709-138">If setting the location fails, the asyncResult.error property will contain an error code.</span></span>
+        <span data-ttu-id="9484b-136">可选。</span><span class="sxs-lookup"><span data-stu-id="9484b-136">Optional.</span></span> <span data-ttu-id="9484b-137">该方法完成后，使用类型 Office.AsyncResult 的单个参数调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="9484b-137">When the method completes, the function passed in the callback parameter is called with a single parameter of type Office.AsyncResult.</span></span> <span data-ttu-id="9484b-138">如果设置位置失败，则 asyncResult.error 属性将包含错误代码。</span><span class="sxs-lookup"><span data-stu-id="9484b-138">If setting the location fails, the asyncResult.error property will contain an error code.</span></span>
 
 
-        <span data-ttu-id="1c709-139">\[Api 集： 邮箱 1.1\]</span><span class="sxs-lookup"><span data-stu-id="1c709-139">\[Api set: Mailbox 1.1\]</span></span>
+        <span data-ttu-id="9484b-139">\[Api 集： 邮箱 1.1\]</span><span class="sxs-lookup"><span data-stu-id="9484b-139">\[Api set: Mailbox 1.1\]</span></span>
       type:
       - '(result: AsyncResult<void>) => void'
