--- a/docs/docs-ref-autogen/outlook_1_5/office.mailboxenums.responsetype.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.mailboxenums.responsetype.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f8bf0ca737da78626a408cc9174a881ab9e65ebe
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 2b009823c844b8cc6843450ba98c50a9d2bdeae7
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26221505"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26649084"
 items:
 - uid: Outlook_1_5.Office.MailboxEnums.ResponseType
   summary: >-
-    <span data-ttu-id="3b60b-101">指定对会议邀请的响应类型。</span><span class="sxs-lookup"><span data-stu-id="3b60b-101">Specifies the type of response to a meeting invitation.</span></span>
+    <span data-ttu-id="426b9-101">指定对会议邀请的响应类型。</span><span class="sxs-lookup"><span data-stu-id="426b9-101">Specifies the type of response to a meeting invitation.</span></span>
 
 
-    <span data-ttu-id="3b60b-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b60b-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table><tr><td> <span data-ttu-id="3b60b-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="3b60b-103">[ Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="3b60b-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="3b60b-104">Compose or read</span></span></td></tr></table>
+    <span data-ttu-id="426b9-102">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="426b9-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table><tr><td> <span data-ttu-id="426b9-103">[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span><span class="sxs-lookup"><span data-stu-id="426b9-103">[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points) </span></span></td><td><span data-ttu-id="426b9-104">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="426b9-104">Compose or read</span></span></td></tr></table>
   name: Office.MailboxEnums.ResponseType
   fullName: Office.MailboxEnums.ResponseType
   langs:
@@ -26,7 +26,7 @@ items:
   - Outlook_1_5.Office.MailboxEnums.ResponseType.Organizer
   - Outlook_1_5.Office.MailboxEnums.ResponseType.Tentative
 - uid: Outlook_1_5.Office.MailboxEnums.ResponseType.Accepted
-  summary: <span data-ttu-id="3b60b-105">参与者已接受会议请求。</span><span class="sxs-lookup"><span data-stu-id="3b60b-105">The meeting request was accepted by the attendee.</span></span>
+  summary: <span data-ttu-id="426b9-105">参与者已接受会议请求。</span><span class="sxs-lookup"><span data-stu-id="426b9-105">The meeting request was accepted by the attendee.</span></span>
   name: Accepted
   fullName: Accepted
   langs:
@@ -34,7 +34,7 @@ items:
   type: field
   numericValue: "\"accepted\""
 - uid: Outlook_1_5.Office.MailboxEnums.ResponseType.Declined
-  summary: <span data-ttu-id="3b60b-106">参与者已拒绝会议请求。</span><span class="sxs-lookup"><span data-stu-id="3b60b-106">The meeting request was declined by the attendee.</span></span>
+  summary: <span data-ttu-id="426b9-106">参与者已拒绝会议请求。</span><span class="sxs-lookup"><span data-stu-id="426b9-106">The meeting request was declined by the attendee.</span></span>
   name: Declined
   fullName: Declined
   langs:
@@ -42,7 +42,7 @@ items:
   type: field
   numericValue: "\"declined\""
 - uid: Outlook_1_5.Office.MailboxEnums.ResponseType.None
-  summary: <span data-ttu-id="3b60b-107">参与者尚未响应。</span><span class="sxs-lookup"><span data-stu-id="3b60b-107">There has been no response from the attendee.</span></span>
+  summary: <span data-ttu-id="426b9-107">参与者尚未响应。</span><span class="sxs-lookup"><span data-stu-id="426b9-107">There has been no response from the attendee.</span></span>
   name: None
   fullName: None
   langs:
@@ -50,7 +50,7 @@ items:
   type: field
   numericValue: "\"none\""
 - uid: Outlook_1_5.Office.MailboxEnums.ResponseType.Organizer
-  summary: <span data-ttu-id="3b60b-108">参与者是会议组织者。</span><span class="sxs-lookup"><span data-stu-id="3b60b-108">The attendee is the meeting organizer.</span></span>
+  summary: <span data-ttu-id="426b9-108">参与者是会议组织者。</span><span class="sxs-lookup"><span data-stu-id="426b9-108">The attendee is the meeting organizer.</span></span>
   name: Organizer
   fullName: Organizer
   langs:
@@ -58,7 +58,7 @@ items:
   type: field
   numericValue: "\"organizer\""
 - uid: Outlook_1_5.Office.MailboxEnums.ResponseType.Tentative
-  summary: <span data-ttu-id="3b60b-109">参与者暂时接受会议请求。</span><span class="sxs-lookup"><span data-stu-id="3b60b-109">The meeting request was tentatively accepted by the attendee.</span></span>
+  summary: <span data-ttu-id="426b9-109">参与者暂时接受会议请求。</span><span class="sxs-lookup"><span data-stu-id="426b9-109">The meeting request was tentatively accepted by the attendee.</span></span>
   name: Tentative
   fullName: Tentative
   langs:
